--- a/ssm/pom.xml
+++ b/ssm/pom.xml
@@ -164,7 +164,14 @@
 			<artifactId>commons-codec</artifactId>
 			<version>1.9</version>
 		</dependency>
-
+		<!-- Mybatis Generator -->
+       <dependency>
+           <groupId>org.mybatis.generator</groupId>
+           <artifactId>mybatis-generator-core</artifactId>
+           <version>1.3.4</version>
+           <scope>compile</scope>
+           <optional>true</optional>
+       </dependency>
 	</dependencies>
   <build>
     <finalName>ssm</finalName>
