--- a/ssm/pom.xml
+++ b/ssm/pom.xml
@@ -172,6 +172,11 @@
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
+       <dependency>
+		    <groupId>com.github.pagehelper</groupId>
+		    <artifactId>pagehelper</artifactId>
+		    <version>5.0.0</version>
+	</dependency>
 	</dependencies>
   <build>
     <finalName>ssm</finalName>
