--- a/ssm/pom.xml
+++ b/ssm/pom.xml
@@ -177,6 +177,12 @@
 		    <artifactId>pagehelper</artifactId>
 		    <version>4.0.0</version>
 	</dependency>
+	
+	<dependency>
+   		 <groupId>com.google.code.gson</groupId>
+    	<artifactId>gson</artifactId>
+    	<version>2.3.1</version>
+	</dependency>
 	</dependencies>
   <build>
     <finalName>ssm</finalName>
