--- a/ssm/pom.xml
+++ b/ssm/pom.xml
@@ -172,6 +172,7 @@
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
+       <!-- pageHelper -->
        <dependency>
 		    <groupId>com.github.pagehelper</groupId>
 		    <artifactId>pagehelper</artifactId>
@@ -183,7 +184,12 @@
     	<artifactId>gson</artifactId>
     	<version>2.3.1</version>
 	</dependency>
-	</dependencies>
+	<dependency>
+   	 	<groupId>joda-time</groupId>
+   		<artifactId>joda-time</artifactId>
+  		<version>2.9.7</version>
+	</dependency>
+  </dependencies>
   <build>
     <finalName>ssm</finalName>
   </build>
